# opus-nx

./: .env.docker  .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  BATTLE_PLAN.md  CLAUDE.md  CLAUDE_AUDIT.md  CLAUDE_TODO.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Hackathon-Event.md  OPUS_NX_V2.md  OPUS_NX_V2_SESSION2_PROMPT.md  OPUS_NX_V2_SPEC.md  PRD.md  README.md  RESEARCH.md  ROADMAP.md  SSOT.md  docker-compose.local.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
agents/: .env.example  Dockerfile  fly.toml  pyproject.toml
agents/scripts/: eval_retrieval.py  eval_utils.py  run_reasoning_eval.py  run_reasoning_eval_live.py
agents/src/: config.py  main.py  server.py  swarm.py  utils.py
agents/src/agents/: __init__.py  base.py  contrarian.py  deep_thinker.py  maestro.py  metacognition.py  synthesizer.py  verifier.py
agents/src/events/: bus.py  types.py
agents/src/graph/: models.py  reasoning_graph.py
agents/src/persistence/: __init__.py  neo4j_client.py  supabase_sync.py
agents/src/tools/: __init__.py  verification.py
agents/tests/: conftest.py  test_bus.py  test_checkpoint.py  test_concurrent.py  test_contrarian.py  test_deep_thinker.py  test_graph.py  test_maestro.py  test_metacognition.py  test_persistence.py  test_retry.py  test_smoke_real.py  test_swarm.py  test_swarm_e2e.py  test_swarm_integration.py  test_synthesizer.py  test_verification.py  test_verifier.py  test_websocket.py
configs/: agents.yaml  categories.yaml
docs/: README.md  prd.md  (+7 more)
(+219 files in other folders)
