[project]
name = "opus-nx-agents"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.78.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "networkx>=3.4",
    "httpx>=0.28",
    "structlog>=24.4",
    "neo4j>=5.26",
    "supabase>=2.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
