[project]
name = "opus-nx-agents"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.79.0",
    "fastapi>=0.128.8",
    "uvicorn[standard]>=0.40.0",
    "websockets>=15.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "networkx>=3.6.1",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
    "neo4j>=6.1.0",
    "supabase>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "ruff>=0.15.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
